tests/anp_test_named_ports_multiple_peers/policies.yaml
# a file copied from :
# https://docs.openshift.com/container-platform/4.17/networking/network_security/AdminNetworkPolicy/ovn-k-egress-nodes-networks-peer.html#egress-traffic-control-networks-peer-external-destinations_ovn-k-egress-nodes-networks-peer
# with some changes
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: egress-peer-1 
spec:
  egress: 
  - action: "Allow"
    name: "allow-egress"
    to:
    - networks:
      - 104.154.164.170/32
    - pods:
        namespaceSelector:
          matchLabels:
            apps: external-apps
        podSelector:
          matchLabels:
            app: web
    ports:
    - portRange:
        protocol: UDP
        start: 5000
        end: 6000
    - portNumber:
        protocol: TCP
        port: 8080
    - namedPort: dns
  - action: "Deny" # deny all other ports
    name: "deny-egress"
    to:
    - networks:
      - 104.154.164.170/32
    - pods:
        namespaceSelector:
          matchLabels:
            apps: external-apps
        podSelector:
          matchLabels:
            app: web
  priority: 30 
  subject: 
    namespaces:
      matchLabels:
        apps: all-apps
